--- a/00_Setup.html
+++ b/00_Setup.html
@@ -121,6 +121,7 @@ $(document).ready(function () {
 </div>
 
 
+<p>To return to the previous page click <a href="https://uofabioinformaticshub.github.io/schoolOfMedicine2016/">here</a> or use the back button on your browser.</p>
 <div id="r-and-rstudio" class="section level2">
 <h2>R and RStudio</h2>
 <p><em>R</em> is available from <a href="https://www.cran.r-project.org/" class="uri">https://www.cran.r-project.org/</a></p>
@@ -149,7 +150,7 @@ install.packages(packList)</code></pre>
 <li>Create a new folder <code>C:\R</code><br /></li>
 <li>Create a new <code>Environment Variable</code> using the steps below called <code>R_LIBS_USER</code> and give it the value <code>C:\R</code></li>
 <li>After these steps, close then re-open RStudio and run the code again</li>
-<li>If these steps don’t resolve the problem, please connect RStudio using your desktop on the ADAPT system.</li>
+<li>If these steps don’t resolve the problem, please connect to your desktop on the ADAPT system and use this version of <code>RStudio</code>.</li>
 </ol>
 <div id="creating-a-new-environment-variable-windows-10-and-windows-8" class="section level4">
 <h4>Creating a new Environment Variable: Windows 10 and Windows 8</h4>
@@ -171,15 +172,9 @@ install.packages(packList)</code></pre>
 <li>In the User Variables Section, click <code>New...</code></li>
 <li>Name the New Variable <code>R_LIBS_USER</code> and specify the value <code>C:\R</code></li>
 </ol>
+<p><a href="https://uofabioinformaticshub.github.io/schoolOfMedicine2016/">Back</a></p>
 </div>
 </div>
-</div>
-<div id="todays-data" class="section level2">
-<h2>Today’s Data</h2>
-<p>For those familiar with the version control system <code>Git</code>, you can clone the repository using</p>
-<p><code>git clone https://github.com/UofABioinformaticsHub/schoolOfMedicine2016.git</code></p>
-<p>Otherwise, just download today’s data as a <code>zipfile</code> using the following link.</p>
-<p><a href="https://github.com/UofABioinformaticsHub/schoolOfMedicine2016/archive/gh-pages.zip" class="uri">https://github.com/UofABioinformaticsHub/schoolOfMedicine2016/archive/gh-pages.zip</a></p>
 </div>
 
 
