--- a/index.html
+++ b/index.html
@@ -148,6 +148,13 @@ $(document).ready(function () {
 <div id="course-material" class="section level2">
 <h2>Course Material</h2>
 <p>The individual sessions are available at the following sites:</p>
+</div>
+<div id="todays-data" class="section level2">
+<h2>Today’s Data</h2>
+<p>For those familiar with the version control system <code>Git</code>, you can clone the repository using</p>
+<p><code>git clone https://github.com/UofABioinformaticsHub/schoolOfMedicine2016.git</code></p>
+<p>Otherwise, just download today’s data as a <code>zipfile</code> using the following link.</p>
+<p><a href="https://github.com/UofABioinformaticsHub/schoolOfMedicine2016/archive/gh-pages.zip" class="uri">https://github.com/UofABioinformaticsHub/schoolOfMedicine2016/archive/gh-pages.zip</a></p>
 <div id="data-in-r" class="section level3">
 <h3>Data in R</h3>
 <p><a href="01_Data.html">01_Data</a><br /><a href="02_Loading_Data.html">02_Loading_Data</a><br /><a href="03_Inspecting_Data.html">03_Inspecting_Data</a></p>
