Added RStudio Image

--- a/00_Setup.html
+++ b/00_Setup.html
@@ -151,7 +151,7 @@ install.packages(packList)</code></pre>
 <li>Create a new folder <code>C:\R</code><br /></li>
 <li>Create a new <code>Environment Variable</code> using the steps below called <code>R_LIBS_USER</code> and give it the value <code>C:\R</code></li>
 <li>After these steps, close then re-open RStudio and run the code again</li>
-<li>If these steps don’t resolve the problem, please connect to your desktop on the ADAPT system and use this version of <code>RStudio</code>.</li>
+<li>If these steps don’t resolve the problem, please connect to your desktop on the ADAPT system and use the version of <code>RStudio</code> installed there.</li>
 </ol>
 <div id="creating-a-new-environment-variable-windows-10-and-windows-8" class="section level4">
 <h4>Creating a new Environment Variable: Windows 10 and Windows 8</h4>
