--- a/03_Data_Frames.html
+++ b/03_Data_Frames.html
@@ -200,7 +200,7 @@ H_A: \mu \neq 2
 <p>Now we have the linear model saved, we can find all the important information by passing this object to the functions <code>anova()</code> and <code>summary()</code></p>
 <pre class="r"><code>anova(mouseLife_lm)
 summary(mouseLife_lm)</code></pre>
-<p>The interpretation of these is beyond to scope of today’s session.</p>
+<p>The interpretation of these is beyond the scope of today’s session.</p>
 <p><a href="https://uofabioinformaticshub.github.io/schoolOfMedicine2016/">Back</a></p>
 </div>
 
