--- a/index.html
+++ b/index.html
@@ -136,13 +136,14 @@ $(document).ready(function () {
 <h2>Introduction</h2>
 <p>The R programming language provides an effective environment for making sense of data that enables us to address various biological questions. In this introduction course, we will illustrate exploratory data analysis that involves calculating numerical and graphical summaries. For more intermediate participants in the course we will examine more complex visualization tools.</p>
 </div>
-<div id="outline" class="section level2">
-<h2>Outline</h2>
+<div id="topics-covered" class="section level2">
+<h2>Topics Covered</h2>
 <ul>
-<li>R data types and operations</li>
-<li>Read data in R and exploratory data analysis</li>
-<li>Install package and calling functions from packages</li>
-<li>Write your own functions</li>
+<li><em>R</em> data types</li>
+<li>Using functions in <em>R</em></li>
+<li>Reading data in <em>R</em></li>
+<li>Exploratory data analysis</li>
+<li>Installing packages</li>
 </ul>
 </div>
 <div id="course-material" class="section level2">
