Added Other Resources on Index page

--- a/index.html
+++ b/index.html
@@ -164,6 +164,10 @@ $(document).ready(function () {
 <h3>Optional Material</h3>
 <p><a href="05_Inspecting_Data.html">05 Inspecting Data</a></p>
 </div>
+<div id="other-resources" class="section level3">
+<h3>Other Resources</h3>
+<p><a href="http://swirlstats.com/">Learn R Using Swirl</a><br /><a href="http://www.adelaide.edu.au/bioinformatics-hub/workshops/r-adelaide-2016/">RAdelaide 2016</a></p>
+</div>
 </div>
 
 
